force-app/main/default/objects/DeletedRecords__c/DeletedRecords__c.object-meta.xml
<CustomObject>
    <label>DeletedRecords</label>
    <nameField>
        <label>Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DeletedRecords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>