force-app/main/default/objects/DeletedRecords__c/fields/DeletedDateTime__c.field-meta.xml
<CustomField>
    <fullName>DeletedDateTime__c</fullName>
    <label>DeletedDateTime</label>
    <type>DateTime</type>
</CustomField>