force-app/main/default/objects/DeletedRecords__c/fields/RecordID__c.field-meta.xml
<CustomField>
    <fullName>RecordID__c</fullName>
    <label>RecordID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>