force-app/main/default/objects/DeletedRecords__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ObjectName__c</columns>
    <columns>RecordID__c</columns>
    <columns>Position__c</columns>
    <columns>Department__c</columns>
    <columns>Contact__c</columns>
    <columns>Date_of_Joining__c</columns>
    <columns>DeletedDateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>